--- a/public/css/master.css
+++ b/public/css/master.css
@@ -47,6 +47,11 @@ Remove the margin in all browsers.
 
 body {
   margin: 0;
+  text-align: justify;
+  /* text-indent: 50px; */
+  /* letter-spacing: 1px;
+  word-spacing: 2px; */
+  line-height: 30px;
 }
 
 /**
@@ -419,3 +424,9 @@ body {
         margin: 6px;
         border-radius: 4px;
     }
+
+
+    .shadow{
+        box-shadow: 0 10px 16px 0 rgb(0 0 0 / 20%), 0 6px 20px 0 rgb(0 0 0 / 19%) !important;
+    }
+    /* .select2-container .select2-selection--single {height: 50px !important;} */
