--- a/public/css/master.css
+++ b/public/css/master.css
@@ -405,7 +405,7 @@ body {
     }
 
     .fl_icon {
-        font-size: -webkit-xxx-large;
+        font-size: xx-large;
         color: #05824d;
     }
 
